[tool.poetry]
name = "habit_tracker"
version = "0.1.0"
description = ""
authors = ["Thiago Pacheco <thiagodelimapacheco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
connexion = {extras = ["swagger-ui"], version = "^2.14.1"}

[tool.poetry.scripts]
start = "habit_tracker.main:run"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
